Fix: restore title visibility by removing overlay and adding padding instead

--- a/css/style.css
+++ b/css/style.css
@@ -573,7 +573,7 @@ section.zone,
     position: relative;
     border: 3px solid #F5C400;
     margin-top: 30px;
-    padding-top: 0 !important;
+    padding-top: 40px !important;
 }
 
 .card.premium::before {
@@ -594,17 +594,6 @@ section.zone,
     white-space: nowrap;
     border: 3px solid #fff;
     display: block;
-}
-
-.card.premium::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 40px;
-    background: #fff;
-    z-index: 2;
 }
 
 .card.premium:hover {
